[gd_scene load_steps=6 format=3 uid="uid://cet3qj5abedkp"]

[ext_resource type="Script" uid="uid://2120osgt7bce" path="res://Scripts/walls.gd" id="1_2bj67"]

[sub_resource type="Animation" id="Animation_cxhnf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 4, 0)]
}

[sub_resource type="Animation" id="Animation_2bj67"]
resource_name = "drop"
length = 7.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 5.5, 7),
"transitions": PackedFloat32Array(2, 2, 1, 1.31951, 1),
"update": 0,
"values": [Vector3(0, 4, 0), Vector3(0, 3.63, 0), Vector3(0, 0.5, 0), Vector3(0, 0.5, 0), Vector3(0, 4, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cxhnf"]
_data = {
&"RESET": SubResource("Animation_cxhnf"),
&"drop": SubResource("Animation_2bj67")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_2bj67"]
size = Vector3(2.045, 2.43, 0.59)

[node name="Walls" type="Node3D"]
script = ExtResource("1_2bj67")

[node name="DropMarker" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, 0)
gizmo_extents = 0.5

[node name="Anim" type="AnimationPlayer" parent="DropMarker"]
libraries = {
&"": SubResource("AnimationLibrary_cxhnf")
}

[node name="Walls" type="Node3D" parent="."]

[node name="Wall" type="CSGBox3D" parent="Walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.2, 4, 0)
use_collision = true
size = Vector3(1.712, 2.72449, 0.05)

[node name="Area3D" type="Area3D" parent="Walls/Wall" groups=["stopsDevices"]]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Walls/Wall/Area3D" groups=["stopsDevices"]]
shape = SubResource("BoxShape3D_2bj67")

[node name="Wall2" type="CSGBox3D" parent="Walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.2, 4, 0)
use_collision = true
size = Vector3(1.712, 2.72449, 0.05)

[node name="Area3D" type="Area3D" parent="Walls/Wall2" groups=["stopsDevices"]]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Walls/Wall2/Area3D" groups=["stopsDevices"]]
shape = SubResource("BoxShape3D_2bj67")

[node name="Wall3" type="CSGBox3D" parent="Walls"]
transform = Transform3D(0.5, 0, 0.866025, 0, 1, 0, -0.866025, 0, 0.5, -0.6, 4, 1.04)
use_collision = true
size = Vector3(1.712, 2.72449, 0.05)

[node name="Area3D" type="Area3D" parent="Walls/Wall3" groups=["stopsDevices"]]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Walls/Wall3/Area3D" groups=["stopsDevices"]]
shape = SubResource("BoxShape3D_2bj67")

[node name="Wall4" type="CSGBox3D" parent="Walls"]
transform = Transform3D(0.5, 0, 0.866025, 0, 1, 0, -0.866025, 0, 0.5, 0.6, 4, -1.04)
use_collision = true
size = Vector3(1.712, 2.72449, 0.05)

[node name="Area3D" type="Area3D" parent="Walls/Wall4" groups=["stopsDevices"]]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Walls/Wall4/Area3D" groups=["stopsDevices"]]
shape = SubResource("BoxShape3D_2bj67")

[node name="Wall5" type="CSGBox3D" parent="Walls"]
transform = Transform3D(-0.5, 0, 0.866025, 0, 1, 0, -0.866025, 0, -0.5, 0.6, 4, 1.04)
use_collision = true
size = Vector3(1.712, 2.72449, 0.05)

[node name="Area3D" type="Area3D" parent="Walls/Wall5" groups=["stopsDevices"]]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Walls/Wall5/Area3D" groups=["stopsDevices"]]
shape = SubResource("BoxShape3D_2bj67")

[node name="Wall6" type="CSGBox3D" parent="Walls"]
transform = Transform3D(-0.5, 0, 0.866025, 0, 1, 0, -0.866025, 0, -0.5, -0.6, 4, -1.04)
use_collision = true
size = Vector3(1.712, 2.72449, 0.05)

[node name="Area3D" type="Area3D" parent="Walls/Wall6" groups=["stopsDevices"]]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Walls/Wall6/Area3D" groups=["stopsDevices"]]
shape = SubResource("BoxShape3D_2bj67")

[connection signal="animation_finished" from="DropMarker/Anim" to="." method="_on_anim_animation_finished"]
